package com.company;


public abstract class Operation
{

    public void commonOperation1(){ System.out.println(   this.getClass().getSimpleName()+" performed a common operation.");}
}
