package com.company;



public class HumanResources
{
    public HumanResources()
    {
        System.out.println("HumanResources is engaged.");
    }

    public double getHourlyRate(int empolyeeID)
    {
        return 20.0;
    }
}
