@startuml

title __SRP EXAMPLE's Class Diagram__\n

  namespace com.company {
    class com.company.Employee {
    }
  }
  

  namespace com.company {
    class com.company.Finance {
    }
  }
  

  namespace com.company {
    class com.company.HumanResources {
    }
  }
  

  namespace com.company {
    class com.company.Main {
    }
  }
  

  namespace com.company {
    class com.company.Operations {
    }
  }
  

  namespace com.company {
    class com.company.Payslip {
    }
  }
  

  namespace com.company {
    class com.company.TechnologyServices {
    }
  }
  

  com.company.Employee o-- com.company.Finance : CFO
  com.company.Employee o-- com.company.Operations : COO
  com.company.Employee o-- com.company.HumanResources : HR
  com.company.Finance o-- com.company.TechnologyServices : CTO
  com.company.Finance o-- com.company.Payslip : payslip


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
